--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="img/logo.png" alt="Logo" class="header__logo">
+            <img src="img/logo.png" alt="Logo" class="header__logo" href="#">
             <form class="search">
                 <input type="text" id="search" name="search" class="search__field" placeholder="Search over 1,000,000 recipes...">
                 <button class="btn search__btn">
