--- a/src/index.html
+++ b/src/index.html
@@ -427,7 +427,9 @@
                 </li>
                 -->
             </ul>
-
+            <button class="btn btn-clear" id="btnClear">
+                <span>Clear List</span>
+            </button>
             <div class="copyright">
                 <p>Coded & Modified Jorge Garcia.</p>
                 <p>&copy; Design by Jonas Schmedtmann.</p>
